--- a/static/style.css
+++ b/static/style.css
@@ -68,12 +68,13 @@ img { /* make images and create button undraggable */
 } */
 .message-container {
   display: grid;
-  grid-template-rows: auto auto;
-  grid-template-columns: 8px auto;
-  padding-top: 10px;
+  grid-template-columns: 6px auto;
+  grid-auto-rows: minmax(min-content, max-content);
+  padding-top: 6px;
   padding-right: 20px;
   padding-left: 20px;
-  font-size: 13px;
+  font-size: 14px;
+  margin-top: 5px;
 }
 .message-container:hover {
   background-color: dimgray;
@@ -85,7 +86,8 @@ img { /* make images and create button undraggable */
   overflow: hidden;
   grid-column: 2;
   grid-row: 1;
-  margin-bottom: 1px;
+  margin-bottom: 0px;
+  
 }
 .message {
   margin-left: 50px;
@@ -95,15 +97,19 @@ img { /* make images and create button undraggable */
   grid-column: 2;
   grid-row: 2;
   white-space: pre-wrap;
+  margin: none !important; 
+  padding: none !important;
+  
 }
 .pfp {
-  width: 39px;
-  height: 39px;
+  width: 38px;
+  height: 38px;
   border-radius: 50%;
   grid-column: 1;
   grid-row: 1 / 3;
 }
 #message_input_form {
+  margin-top: 10px;
   margin-bottom: 20px;
   margin-right: 15px;
   margin-left: 15px;
