--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,16 @@
-img { /* make images and create button undraggable */
+img { /* make images and create button undraggable and unhighlitable*/
   -webkit-user-drag: none;
   -khtml-user-drag: none;
   -moz-user-drag: none;
   -o-user-drag: none;
   user-drag: none;
+     -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
 } 
+
 #background { /* Should background extend to full height or not including navbar at bottom? */
   position: absolute;
   width: 100%;
