--- a/templates/index.html
+++ b/templates/index.html
@@ -118,41 +118,41 @@
       url: '/chat_history',
       contentType: 'application/json;charset=UTF-8',
       success: function(chat_history) {
-        var nowMoment = moment();
-        var timeDisplayMode = 0;
-        chat_history.forEach(function(item) {
-          var messageMoment = moment(item.datetime).local();
-          var timeDifference = nowMoment.diff(moment(item.datetime), 'days');
-          if (timeDisplayMode == 0) {
-            if (timeDifference >= 2) {
-              messageMoment = 'on ' + messageMoment.format('M/D/YYYY');
+        const newMode = document.createElement('div');
+        newMode.className = 'message-container';
+        if (item.combine == 'false') {
+          var nowMoment = moment();
+          var timeDisplayMode = 0;
+          chat_history.forEach(function(item) {
+            var messageMoment = moment(item.datetime).local();
+            var timeDifference = nowMoment.diff(moment(item.datetime), 'days');
+            if (timeDisplayMode == 0) {
+              if (timeDifference >= 2) {
+                messageMoment = 'on ' + messageMoment.format('M/D/YYYY');
+              }
+              else if (timeDifference >= 1) {
+                timeDisplayMode = 1;
+                messageMoment = 'Yesterday at ' + messageMoment.format('h:mm A'); //Absolutely horrible method, please rewrite later thank you!
+              }
+              else {
+                timeDisplayMode = 2;
+                messageMoment = 'at ' + messageMoment.format('h:mm A');
+              }
             }
-            else if (timeDifference >= 1) {
-              timeDisplayMode = 1;
-              messageMoment = 'Yesterday at ' + messageMoment.format('h:mm A'); //Absolutely horrible method, please rewrite later thank you!
+            else if (timeDisplayMode == 1) {
+              if (timeDifference >= 1) {
+                messageMoment = 'Yesterday at ' + messageMoment.format('h:mm A');
+              }
+              else {
+                messageMoment = 'at ' + messageMoment.format('h:mm A');
+              }
             }
             else {
-              timeDisplayMode = 2;
               messageMoment = 'at ' + messageMoment.format('h:mm A');
             }
+            // Give pfp image default fallback image
+            newMode.innerHTML = '<img class="pfp" src="' + item.picture + '" alt="!"> <p class="message-title"> <span class="name"> <b>' + item.name + ' </b> </span> <span class="datetime">' + messageMoment + '</span> </p> <p class="message">' + item.message + '</p>';
           }
-          else if (timeDisplayMode == 1) {
-            if (timeDifference >= 1) {
-              messageMoment = 'Yesterday at ' + messageMoment.format('h:mm A');
-            }
-            else {
-              messageMoment = 'at ' + messageMoment.format('h:mm A');
-            }
-          }
-          else {
-            messageMoment = 'at ' + messageMoment.format('h:mm A');
-          }
-          const newMode = document.createElement('div');
-          newMode.className = 'message-container';
-          // Give pfp image default fallback image
-          newMode.innerHTML = '<img class="pfp" src="' + item.picture + '" alt="!"> <p class="message-title"> <span class="name"> <b>' + item.name + ' </b> </span> <span class="datetime">' + messageMoment + '</span> </p> <p class="message">' + item.message + '</p>';
-          
-//           newMode.innerHTML = '<p class="name"> <b>' + item.name + '</b> </p> <p class="message">' + item.message + '</p><img class="pfp" src="' + item.picture + '" alt="!">' + item.datetime;
           document.getElementById('messages').appendChild(newMode);
         });
         //alert(JSON.stringify(chat_history));
