--- a/static/style.css
+++ b/static/style.css
@@ -81,7 +81,7 @@ img { /* make images and create button undraggable and unhighlitable*/
   padding-right: 20px;
   padding-left: 20px;
   font-size: 14px;
-  margin-top: 5px;
+  margin-bottom: 5px;
 }
 .message-container:hover {
   background-color: #32353a;
@@ -116,7 +116,6 @@ img { /* make images and create button undraggable and unhighlitable*/
   grid-row: 1 / 3;
 }
 #message_input_form {
-  margin-top: 10px;
   margin-bottom: 20px;
   margin-right: 15px;
   margin-left: 15px;
