--- a/templates/index.html
+++ b/templates/index.html
@@ -90,16 +90,16 @@
 
     socket.on('recieve_message', function (data) {
       const newMode = document.createElement('div');
+      var messageMoment = moment(data.datetime).local().format('h:mm A');
       if (data.combine == 'false') {
         newMode.className = 'message-container';
-        var messageMoment = moment(data.datetime).local();
-        messageMoment = 'at ' + messageMoment.format('h:mm A')
+        messageMoment = 'at ' + messageMoment;
         // Give pfp image default fallback image
         newMode.innerHTML = '<img class="pfp" src="' + data.picture + '" alt="!"> <p class="message-title"> <span class="name"> <b>' + data.name + ' </b> </span> <span class="datetime">' + messageMoment + '</span> </p> <p class="message">' + data.message + '</p>';
       }
       else {
         newMode.className = 'message-container-combine';
-        newMode.innerHTML = '<p class="message-combine">' + data.message + '</p>'
+        newMode.innerHTML = '<p class="message-combine-time">' + messageMoment + '</p><p class="message-combine">' + data.message + '</p>'
       }
       document.getElementById('messages').appendChild(newMode);
     });
@@ -129,7 +129,7 @@
               }
               else if (timeDifference >= 1) {
                 timeDisplayMode = 1;
-                messageMoment = 'Yesterday at ' + messageMoment.format('h:mm A'); //Absolutely horrible method, please rewrite later thank you!
+                messageMoment = 'Yesterday at ' + messageMoment.format('h:mm A'); //There should be a better method than this
               }
               else {
                 timeDisplayMode = 2;
@@ -151,7 +151,7 @@
           }
           else {
             newMode.className = 'message-container-combine';
-            newMode.innerHTML = '<p class="message-combine">' + item.message + '</p>'
+            newMode.innerHTML = '<p class="message-combine-time">' + messageMoment.format('h:mm A'); + '</p><p class="message-combine">' + item.message + '</p>'
           }
           document.getElementById('messages').appendChild(newMode);
         });
