--- a/static/style.css
+++ b/static/style.css
@@ -77,11 +77,11 @@ img { /* make images and create button undraggable and unhighlitable*/
   color: #d7d9da;
   grid-template-columns: 2px auto;
   grid-auto-rows: minmax(min-content, max-content);
-  padding-top: 6px;
+  padding-top: 2px;
   padding-right: 20px;
   padding-left: 20px;
   font-size: 14px;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
 .message-container:hover {
   background-color: #32353a;
@@ -97,7 +97,7 @@ img { /* make images and create button undraggable and unhighlitable*/
   
 }
 .message {
-  margin-bottom: 5px;
+  margin-bottom: 2px;
   padding: 0;
   margin-left: 50px;
   white-space: initial;
@@ -114,6 +114,40 @@ img { /* make images and create button undraggable and unhighlitable*/
   border-radius: 50%;
   grid-column: 1;
   grid-row: 1 / 3;
+}
+.message-container-combine {
+  display: grid;
+  color: #d7d9da;
+  grid-template-columns: 50px auto;
+  grid-auto-rows: minmax(min-content);
+  padding-top: 0px;
+  padding-right: 20px;
+  padding-left: 20px;
+  font-size: 14px;
+}
+.message-container-combine:hover {
+  background-color: #32353a;
+}
+.message-combine-time {
+  padding: 0;
+  padding-top: 5px;
+  margin: 0;
+  white-space: initial;
+  word-break: break-all;
+  overflow: hidden;
+  font-size: 10px;
+  grid-column: 1;
+  grid-row: 1;
+}
+.message-combine {
+  padding: 2px;
+  margin: 0;
+  white-space: initial;
+  word-break: break-all;
+  overflow: hidden;
+  grid-column: 2;
+  grid-row: 1;
+  white-space: pre-wrap;
 }
 #message_input_form {
   margin-bottom: 20px;
@@ -235,3 +269,16 @@ img { /* make images and create button undraggable and unhighlitable*/
   background-color: black;
   border-radius: 10px;
 }
+/* Implement Scroll to bottom on send
+
+5:14 PM
+
+Enter message box css and send button css
+
+5:15 PM
+
+Time appear on hover
+
+5:15 PM
+
+CSS of datetime on regular messages */
