--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@
           }
           else {
             newMode.className = 'message-container-combine';
-            newMode.innerHTML = '<p class="message-combine-time">' + messageMoment.format('h:mm A'); + '</p><p class="message-combine">' + item.message + '</p>';
+            newMode.innerHTML = '<p class="message-combine-time">' + messageMoment.format('h:mm A') + '</p><p class="message-combine">' + item.message + '</p>';
           }
           document.getElementById('messages').appendChild(newMode);
         });
