--- a/static/style.css
+++ b/static/style.css
@@ -129,6 +129,11 @@ img { /* make images and create button undraggable and unhighlitable*/
   background-color: #32353a;
 }
 .message-combine-time {
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   padding: 0;
   padding-top: 5px;
   margin: 0;
