--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
     //let last_message = '';
     
     $(".message-container-combine").hover(function() {
-      $(this).hide();
+      $(".message-container-combine").hide();
     });
     
     socket.on('connect', function() {
