--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
     var socket = io();
     //let last_message = '';
     
-    $(".message-container-combine").hover(function() {
+    $(".message-container-combine").mouseover(function() {
       $(".message-container-combine").hide();
     });
     
