--- a/templates/index.html
+++ b/templates/index.html
@@ -63,8 +63,8 @@
     var socket = io();
     //let last_message = '';
     
-    $("#chats").mouseover(function() {
-      $("#chats").hide();
+    $("#messages").mouseover(function() {
+      $("#messages").hide();
     });
     
     socket.on('connect', function() {
