--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,8 @@
     $.ajax({
       type: "POST",
       url: '/chat_history',
+      dataType: "json",
+      data: JSON.stringify([{'i': '50'}]),
       contentType: 'application/json;charset=UTF-8',
       success: function(chat_history) {
         var nowMoment = moment();
