--- a/templates/index.html
+++ b/templates/index.html
@@ -113,8 +113,8 @@
     $.ajax({
       type: 'POST',
       url: '/chat_history',
-      //dataType: "json",
-      //data: JSON.stringify({'space_i': 'test'}),
+      dataType: "json",
+      data: JSON.stringify({'space_i': 'test'}),
       contentType: 'application/json;charset=UTF-8',
       success: function(chat_history) {
         var nowMoment = moment();
