--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,7 @@
         newMode.className = 'message-container-combine';
         newMode.innerHTML = '<p class="message-combine-time">' + messageMoment + '</p><p class="message-combine">' + data.message + '</p>'
       }
+      alert('recieved');
       document.getElementById('messages').prepend(newMode);
     });
     
