--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
         <img src="/static/images/Space.jpeg" alt="pfp" class="space" id="add">
 <!--         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button> -->
       </div>
+    </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
