--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-* Color Themes; SVGs, JavaS; Border; Fonts; Textcolors; Borders SEE 852 search colors: ; Selected Color*/
+/* Color Themes; SVGs, JavaS; Border; Fonts; Textcolors; Borders SEE 852 search colors: ; Selected Color*/
 :root {
   --main-bg-color: #2f3136;
   --main-font-color: white;
