--- a/static/login.css
+++ b/static/login.css
@@ -10,6 +10,12 @@
   z-index: -1;
   opacity: 0;
 }
+#oneconnected-logo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 #log-in-container {
   margin: 0 auto;
   margin-top: 80px;
@@ -57,6 +63,6 @@
 
 @media only screen and (max-width: 400px) {
   #log-in-container {
-    width: 100vw;
+    width: 90vw;
   }
 }
