--- a/templates/index.html
+++ b/templates/index.html
@@ -746,7 +746,7 @@
           url: '/logout',
           dataType: "json",
           success: function(data) {
-            window.location.href = "https://www.oneconnected.app";
+            window.location.href = "https://sbhs-platform.herokuapp.com";
           }
         });
       });
@@ -1863,6 +1863,7 @@
       
       
       document.getElementById('create-space-form').onsubmit = function (e) {
+	e.preventDefault();
         alert("Your request to make a space has been received. After being reviewed by school officials, your request will be approved and your space will be displayed on the Club Directory.")
         let space_name = document.getElementById('space-name').value.trim();
         let space_image = document.getElementById('space-picture').value.trim();
@@ -2012,8 +2013,8 @@
       });
 
       socket.on("space_invite", function (data) {    
-        navigator.clipboard.writeText('https://www.oneconnected.app/invite/' + data['_id']);
-        alert('https://www.oneconnected.app/invite/' + data['_id']);
+        navigator.clipboard.writeText('https://sbhs-plaform.herokuapp.com/invite/' + data['_id']);
+        alert('https://sbhs-platform.herokuapp.com/invite/' + data['_id']);
         if (data['user'] == user_id) {
           popupSuccess();
         }
