--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <img id="login-bg" src="/static/images/login-bg.png">
+    <!--<img width="20px" id="oneconnected-logo" alt="Logo" src="/static/images/logo-no-background.png">-->
     <div id="log-in-container">
       <p id="log-in-header">Santa Barbara High School Platform</p>
         <a id="log-in-link" href="/login">
@@ -23,6 +24,7 @@
           </div>
         </a>
       <p id="log-in-footer"> {{ login_error }} </p>
+      <p>By proceeding to use our Services, you agree to our <a href="https://privacypolicy.oneconnected.repl.co">privacy policy</a> and <a href="https://cookiepolicy.oneconnected.repl.co">cookie policy</a>.</p>
     </div>
 <!--     <div id="like_button_container"></div>
     <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
