--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@
         <div id="admin-settings" class="admin-tab pointer">Settings</div>
         <div id="admin-logs" class="admin-tab pointer">Logs</div>
         <div id="admin-users" class="admin-tab pointer">Users</div>
+	<div id="admin-spaces" class="admin-tab pointer">Approve Spaces</div>
         <img class="pointer white-icon" id="exit-server-settings" src="/static/images/x.svg">
       </div>
       <div id='admin-search'>
