--- a/templates/index.html
+++ b/templates/index.html
@@ -2101,17 +2101,19 @@
 
       $(document).on('click', '#confirm-delete-message-button', function() {
         let message_id = selected_message;
-        $.ajax({
-          type: 'POST',
-          url: '/delete_message',
-          dataType: 'json',
-          data: JSON.stringify({'message_id': message_id, 'room_id': current_room}),//
-          contentType: 'application/json;charset=UTF-8',
-          success: function (delete_message) {
-            deleteMessageModal.style.display = "none";
-            socket.emit('deleted_message', {'message_id': message_id, 'room_id': current_room});
-          }
-        });
+	deleteMessageModal.style.display = "none";
+	socket.emit('deleted_message', {'message_id': message_id, 'room_id': current_room});
+//         $.ajax({
+//           type: 'POST',
+//           url: '/delete_message',
+//           dataType: 'json',
+//           data: JSON.stringify({'message_id': message_id, 'room_id': current_room}),//
+//           contentType: 'application/json;charset=UTF-8',
+//           success: function (delete_message) {
+//             deleteMessageModal.style.display = "none";
+//             socket.emit('deleted_message', {'message_id': message_id, 'room_id': current_room});
+//           }
+//         });
       });
       
       $(document).on('click', '#close-confirm-delete-message', function() {
