--- a/templates/index.html
+++ b/templates/index.html
@@ -570,7 +570,7 @@
           url: '/logout',
           dataType: "json",
           success: function(data) {
-            window.location.href = "https://www.oneconnected.app";
+            window.location.href = "https://sbhs-platform.herokuapp.com";
           }
         });
       });
