--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
       <p id="log-in-header">Santa Barbara High School Platform</p>
         <a id="log-in-link" href="/login">
           <div id="log-in-button">
-          <img width="20px" id="google-logo" alt="Google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">
+          <img width="20px" id="google-logo" alt="Google" src="https://developers.google.com/static/identity/images/g-logo.png">
             <p id="log-in-text">Continue with Google</p>
           </div>
         </a>
